2013-07-18  Marek Polacek  <polacek@redhat.com>

	* lib/ubsan-dg.exp: Fix a typo in comment.

2013-07-15  Marek Polacek  <polacek@redhat.com>

	* lib/ubsan-dg.exp: New file.
	* g++.dg/ubsan/ubsan.exp: New file.
	* gcc.dg/ubsan/ubsan.exp: New file.
	* g++.dg/ubsan/cxx11-shift-1.C: New test.
	* g++.dg/ubsan/cxx11-shift-2.C: New test.
	* c-c++-common/ubsan/div-by-zero-3.c: New test.
	* c-c++-common/ubsan/div-by-zero-1.c: New test.
	* c-c++-common/ubsan/div-by-zero-4.c: New test.
	* c-c++-common/ubsan/shift-3.c: New test.
	* c-c++-common/ubsan/unreachable-1.c: New test.
	* c-c++-common/ubsan/shift-1.c: New test.
	* c-c++-common/ubsan/shift-2.c: New test.
	* c-c++-common/ubsan/div-by-zero-2.c: New test.
	* gcc.dg/ubsan/c99-shift-2.c: New test.
	* gcc.dg/ubsan/c99-shift-1.c: New test.

2013-07-04  Joern Rennecke <joern.rennecke@embecosm.com>

	PR c/57821
	* gcc.dg/large-size-array-6.c: New test.

2013-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38634
	* g++.dg/template/crash116.C: New.

2013-07-04  Joern Rennecke <joern.rennecke@embecosm.com>

	* gcc.dg/tree-ssa/vrp66.c: Make conditional on { target { ! int16 } } .
	* gcc.dg/tree-ssa/vrp66-int16-sw.c: New test.

2013-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54998
	* g++.dg/cpp0x/nsdmi-list3.C: New.

2013-07-03  Jakub Jelinek  <jakub@redhat.com>

	PR target/57777
	* gcc.target/i386/pr57777.c: New test.

	PR c++/57771
	* g++.dg/template/arg9.C: New test.

2013-07-02  Sriraman Tallam  <tmsriram@google.com>

	* gcc.target/i386/avx-inline.c: New test.

2013-07-02  Maciej W. Rozycki  <macro@codesourcery.com>

	* gcc.target/mips/call-1.c: Accept JALRS and JALR.
	* gcc.target/mips/call-2.c: Likewise.
	* gcc.target/mips/call-3.c: Likewise.
	* gcc.target/mips/lazy-binding-1.c: Likewise.

2013-07-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/57741
	* gcc.dg/vect/pr57741-1.c: New test.
	* gcc.dg/vect/pr57741-2.c: New test.
	* gcc.dg/vect/pr57741-3.c: New test.
